--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,28 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <profiles>
+    <profile>
+      <id>Reg_Forecasting</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19.1</version>
+            <configuration>
+              <testFailureIgnore>true</testFailureIgnore>
+              <suiteXmlFiles>
+                <suiteXmlFile>src/test/resources/testPlans/REG.xml</suiteXmlFile>
+              </suiteXmlFiles>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <dependencies>
-      
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-api</artifactId>
@@ -34,6 +54,5 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
-
   </dependencies>
 </project>
